fix navbar overflow

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  @apply bg-primary;
+  @apply bg-primary overflow-x-hidden;
 }
 
 html,
